# Logic-Design

./: .gitignore  Assistant.cpp  Assistant.h  CMakeLists.txt  main.cpp
BooleanFunctions/: Interface.cpp  Interface.h  TabularMethod.cpp  TabularMethod.h  TabularMethodController.cpp  TabularMethodController.h  cell.cpp  cell.h
NumberSystem/: binaryInt.cpp  binaryInt.h
